# PDIC

./: .dockerignore  .gitignore  404.html  CMakeLists.txt  README.md  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml  requirement.yml  setup.py  sitemap.xml
.devcontainer/: Dockerfile  conda-github-requirement.yml  devcontainer.json  dockross.dockerfile  requirement.yml
.github/workflows/: ci-cd.yml
1.0-Abstract/: index.html
2.0-Requirement/: index.html
2.1-Binary/: index.html
2.2-Python/: index.html
3.0-Developpement/: index.html
4.0-Links/: index.html
5.0-Extra/: index.html
5.1-Documentations/: index.html
_skbuild/linux-x86_64-3.8/cmake-build/: .ninja_deps  .ninja_log  CMakeSpec.json  build.ninja  install_manifest.txt
docs/: 1.0-Abstract.md  2.0-Requirement.md  2.1-Binary.md  2.2-Python.md  3.0-Developpement.md  4.0-Links.md  5.0-Extra.md  5.1-Documentations.md
docs_format/: Readme.md  build.sh
docs_format/doc/: aqelib.md
docs_format/doc/aqelib/: index.html
docs_format/doc/aqelib/chemaxon/: chemaxon.html  index.html
docs_format/doc/aqelib/credentials/: aws.html  index.html
docs_format/doc/aqelib/docking/: index.html  smina.html
docs_format/doc/aqelib/frametools/: frametools.html  index.html
docs_format/doc/aqelib/functional/: funcs.html  index.html
docs_format/doc/aqelib/loggers/: chemlog.html  index.html
docs_format/doc/aqelib/mdft/: index.html  mdft.html  mdft_inputs.html
docs_format/doc/aqelib/molecular_mechanics/: index.html  relax.html  run_gromacs.html  utils.html
docs_format/doc/aqelib/moltools/: index.html  tools.html
docs_format/doc/aqelib/parallel/: index.html  thread.html
documentation/: 2.0-Usages.md  3.0-Descriptions.md
examples/: PDI_test_parse.c  example.py  level_1.c  level_2.c  level_3.cpp
examples/expected/: level_1.yml  level_2.yml  level_3.yml
modules/: Binary.cmake  Builder.cmake  LibClang.cmake  Pybuild.cmake  Tests.cmake
search/: search_index.json
src/: PDIDecls.cpp  PDIDecls.hpp  PDISerializer.cpp  PDISerializer.hpp  PDITools.cpp  PDITools.hpp
src/pdic/: PDIDecls.cpp  PDIDecls.hpp  PDISerializer.cpp  PDISerializer.hpp  PDITools.cpp  PDITools.hpp  __init__.py  main.hpp  maintest.hpp  pypdicbind.hpp
tests/: c_yaml_test.cc  c_yaml_test.py
